--- a/report/src/Files/design.tex
+++ b/report/src/Files/design.tex
@@ -72,7 +72,7 @@ Here can be found the schemas of the read FSM \ref{readFSMSchema} \ref{readFSMSc
     \hline
     IDLE & \small {!decerr \&\& (AWVALID \&\& AWREADY) \&\& !(WVALID \&\& WREADY)} &	0	& ADDR HS \\
     & \small{!decerr \&\& (AWVALID \&\& AWREADY) \&\& (WVALID \&\& WREADY)} &	0	& DATA HS \\
-    & WREADY \&\& decerr &	0 &	ERR STATE \\
+    & BREADY \&\& decerr &	0 &	ERR STATE \\
     \hline
     ADDR HS	& WVALID \&\& WREADY &	0	& DATA HS \\
     \hline
